# kube-manifest-lint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  Makefile  README.md  pyproject.toml  vendor-schemas.py
kube_manifest_lint/: main.py
kube_manifest_lint/schemas/v1.17.0/: _definitions.json  affinity.json  aggregationrule-rbac-v1.json  all.json  allowedcsidriver-policy-v1beta1.json  allowedflexvolume-extensions-v1beta1.json  allowedflexvolume.json  allowedhostpath-extensions-v1beta1.json  allowedhostpath-policy-v1beta1.json  apigroup-meta-v1.json  apigroup.json  apigrouplist-meta-v1.json  apigrouplist.json  apiresource.json  apiresourcelist-meta-v1.json  apiresourcelist.json  apiservice-apiregistration-v1.json  apiservice-apiregistration-v1beta1.json  apiservice.json  apiservicecondition-apiregistration-v1beta1.json  apiservicelist-apiregistration-v1.json  apiservicelist-apiregistration-v1beta1.json  apiservicelist.json  apiservicespec-apiregistration-v1.json  apiservicespec-apiregistration-v1beta1.json  apiservicestatus-apiregistration-v1.json  apiservicestatus-apiregistration-v1beta1.json  apiversions-meta-v1.json  apiversions.json  attachedvolume-v1.json  auditsink-auditregistration-v1alpha1.json  auditsink.json  auditsinklist-auditregistration-v1alpha1.json  auditsinklist.json  auditsinkspec-auditregistration-v1alpha1.json  awselasticblockstorevolumesource-v1.json  azurediskvolumesource-v1.json  binding-v1.json  (+705 more)
tests/: test_main.py
tests/manifests/: deployment-extra-properties.yaml  non-kubernetes-file.yaml  unknown-schema.yaml
